Correcting overflow problems

--- a/webpage/src/assets/css/abstract/_base.scss
+++ b/webpage/src/assets/css/abstract/_base.scss
@@ -1,8 +1,10 @@
 @import "./variables";
 html,
-body {
+body,
+main {
 	height: auto;
-	min-height: 100vh;
+	// min-height: 100vh;
+	max-width: 100vw;
 	box-sizing: border-box;
 }
 
@@ -10,7 +12,9 @@ body {
 	background: $morning-gradient;
 	background-repeat: no-repeat;
 	box-sizing: border-box;
+	width: 100%;
 }
+
 body.night {
 	background: $night-gradient;
 }
@@ -21,5 +25,13 @@ main {
 	flex-direction: column;
 	gap: 3rem;
 
-	margin: 2rem 0;
+	padding: 2rem 0;
+	width: 100%;
+}
+
+@media screen and (min-width: $screen-computer) {
+	main {
+		gap: 2rem;
+		padding: 1rem 0;
+	}
 }
