--- a/webpage/src/assets/css/components/_card.scss
+++ b/webpage/src/assets/css/components/_card.scss
@@ -6,7 +6,6 @@
 	flex-direction: column;
 	gap: 1rem;
 
-	margin: 0 2rem;
 	padding: 1rem 2rem;
 
 	background: #eeeeee;
