--- a/webpage/src/assets/css/components/_header.scss
+++ b/webpage/src/assets/css/components/_header.scss
@@ -5,7 +5,7 @@
 	justify-content: center;
 	align-items: center;
 
-	width: 100vw;
+	max-width: 100vw;
 	height: 3rem;
 
 	.header__title {
