--- a/webpage/src/assets/css/components/_player.scss
+++ b/webpage/src/assets/css/components/_player.scss
@@ -6,7 +6,6 @@
 	align-items: center;
 	gap: 1rem;
 
-	margin: 0 2rem;
 	padding: 1rem 2rem;
 	width: 65vw;
 
